--- a/grupos/index.html
+++ b/grupos/index.html
@@ -10,13 +10,13 @@
     <table>
       <tr id="fixequcam">
         <td>
-          <span class="fec"><a href="/home/alumno/Escritorio/lombardi/fixture/index.html">Fixture Mundial 🌍</a></span>
+          <span class="fec"><a href="index.html">Fixture Mundial 🌍</a></span>
         </td>
         <td>
-          <span class="fec"><a href="/home/alumno/Escritorio/lombardi/clasificados/index.html">Equipos Clasificados 🇨🇱🚫</a></span>
+          <span class="fec"><a href="../clasificados/index.html">Equipos Clasificados 🇨🇱🚫</a></span>
         </td>
         <td>
-          <span class="fec"><a href="/home/alumno/Escritorio/lombardi/campeones/index.html">Campeones Mundiales 🏆</a></span>
+          <span class="fec"><a href="..campeones/index.html">Campeones Mundiales 🏆</a></span>
         </td>
       </tr>
     </table>
@@ -106,6 +106,19 @@
       </tr>
 
     </table>
+
+    <div class="matches">
+      <div class="match">
+        <h4>Fecha 1</h4>
+        <form onsubmit="handleSubmit(event)">
+          <label>Senegal</label>
+          <input type="number" size="2">
+          <input type="number" size="2">
+          <label>Paises Bajos</label>
+          <input type="submit" value="&#x2714;">
+        </form>
+      </div>
+    </div>
 
     <table>
       <tr>
@@ -582,5 +595,6 @@
       </tr>
 
     </table>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
