--- a/clasificados/index.html
+++ b/clasificados/index.html
@@ -7,11 +7,29 @@
   </head>
   <body>
     <h1>🌍 Mundial Qatar 2022 🌍</h1>
-    <ul>
-      <li><a href="/home/alumno/Escritorio/lombardi/fixture/index.html">Fixture Mundial 🌍</a></li>
-      <li><a href="/home/alumno/Escritorio/lombardi/clasificados/index.html">Equipos Clasificados 🇨🇱🚫</a></li>
-      <li><a href="/home/alumno/Escritorio/lombardi/campeones/index.html">Campeones Mundiales 🏆</a></li>
-    </ul>
+    <table>
+      <tr id="fixequcam">
+        <td>
+          <span class="fec"><a href="../grupos/index.html">Fixture Mundial 🌍</a></span>
+        </td>
+        <td>
+          <span class="fec"><a href="../clasificados/index.html">Equipos Clasificados 🇨🇱🚫</a></span>
+        </td>
+        <td>
+          <span class="fec"><a href="../campeones/index.html">Campeones Mundiales 🏆</a></span>
+        </td>
+      </tr>
+    </table>
     <h3>EQUIPOS CLASIFICADOS</h3>
+    <div class="eqs">
+      <img src="./imagenes/894.png" alt="">
+      <br>
+      <strong>
+        |🇶🇦|Qatar
+      </strong>
+    <br>
+    <i>Organizador</i>
+    </div>
+
   </body>
 </html>
